# internal/handler/review_handler.go
@@ -1,8 +1,14 @@
 package handler
 
 import (
+	"errors"
+	"net/http"
+	"strconv"
+
 	"github.com/gin-gonic/gin"
+	"github.com/morning-glorys/drav-backend/internal/model"
 	"github.com/morning-glorys/drav-backend/internal/service"
+	"github.com/morning-glorys/drav-backend/pkg/apperror"
 )
 
 type ReviewHandler struct {
@@ -26,7 +32,33 @@ func NewReviewHandler(reviewService service.ReviewService) *ReviewHandler {
 // @Security BearerAuth
 // @Router /reviews [post]
 func (h *ReviewHandler) CreateReview(c *gin.Context) {
-	//TODO: Implementasikan handler untuk membuat review, termasuk validasi input dan memastikan user hanya bisa mereview produk yang pernah dibeli gunakan eror handling di pkg/apperror
+	userIDRaw, exists := c.Get("userID")
+	if !exists {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Unauthorized"})
+		return
+	}
+	userID, ok := userIDRaw.(int)
+	if !ok {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Invalid user ID"})
+		return
+	}
+	var req model.CreateReviewRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "format ulasan tidak valid"})
+		return
+	}
+	err := h.reviewService.CreateReview(c.Request.Context(), userID, &req)
+	if err != nil {
+		if errors.Is(err, apperror.ErrReviewInvalid) {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "rating harus 1-5 dan komentar tidak boleh kosong"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "terjadi kesalahan internal server"})
+		return
+	}
+
+	c.JSON(http.StatusCreated, gin.H{"message": "ulasan berhasil ditambahkan"})
+
 }
 
 // GetProductReviews godoc
@@ -40,6 +72,18 @@ func (h *ReviewHandler) CreateReview(c *gin.Context) {
 // @Failure 500 {object} map[string]string
 // @Router /products/{product_id}/reviews [get]
 func (h *ReviewHandler) GetReviewsByProductID(c *gin.Context) {
-	// TODO: Implementasikan handler untuk mengambil reviews berdasarkan product id, termasuk nama user yang mereview gunakan eror handling di pkg/apperror
-	// Pastikan untuk mengembalikan response yang sesuai dengan format yang diharapkan oleh frontend
+	productID, err := strconv.Atoi(c.Param("product_id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "id produk tidak valid"})
+		return
+	}
+	reviews, err := h.reviewService.GetReviewsByProductID(c.Request.Context(), productID)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "gagal mengambil ulasan produk"})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"message": "berhasil mengambil ulasan",
+		"data":    reviews,
+	})
 }
